2004-06-06  Bob Halley  <halley@dnspython.org>

	* (Version 1.3.1 released)

2004-05-22  Bob Halley  <halley@dnspython.org>

	* dns/update.py (Update.delete): We erroneously specified a
	"deleting" value of dns.rdatatype.NONE instead of
	dns.rdataclass.NONE when the thing being deleted was either an
	Rdataset instance or an Rdata instance.

	* dns/rdtypes/ANY/SSHFP.py: Added support for the proposed SSHFP
	RR type.

2004-05-14  Bob Halley  <halley@dnspython.org>

	* dns/rdata.py (from_text): The masterfile reader did not
	accept the unknown RR syntax when used with a known RR type.

2004-05-08  Bob Halley  <halley@dnspython.org>

	* dns/name.py (from_text): dns.name.from_text() did not raise
	an exception if a backslash escape ended prematurely.

2004-04-09  Bob Halley  <halley@dnspython.org>

	* dns/zone.py (_MasterReader._rr_line): The masterfile reader
	erroneously treated lines starting with leading whitespace but
	not having any RR definition as an error.  It now treats
	them like a blank line (which is not an error).

2004-04-01  Bob Halley  <halley@dnspython.org>
	
	* (Version 1.3.0 released)

2004-03-19  Bob Halley  <halley@dnspython.org>

	* Added support for new DNSSEC types RRSIG, NSEC, and DNSKEY.

2004-01-16  Bob Halley  <halley@dnspython.org>

	* dns/query.py (_connect): Windows returns EWOULDBLOCK instead
	of EINPROGRESS when trying to connect a nonblocking socket.

2003-11-13  Bob Halley  <halley@dnspython.org>

	* dns/rdtypes/ANY/LOC.py (LOC.to_wire): We encoded and decoded LOC
	incorrectly, since we were interpreting the values of altitiude,
	size, hprec, and vprec in meters instead of centimeters.

	* dns/rdtypes/IN/WKS.py (WKS.from_wire): The WKS protocol value is
	encoded with just one octet, not two!

2003-11-09  Bob Halley  <halley@dnspython.org>

	* dns/resolver.py (Cache.maybe_clean): The cleaner deleted items
	from the dictionary while iterating it, causing a RuntimeError
	to be raised.  Thanks to Mark R. Levinson for the bug report,