@@ -19,7 +19,7 @@
 
 MAJOR = 1
 MINOR = 3
-MICRO = 1
+MICRO = 2
 RELEASELEVEL = 0x0f
 SERIAL = 0
 
