@@ -21,7 +21,7 @@ from distutils.core import setup
 
 setup(
     name = "dnspython",
-    version = "1.3.1",
+    version = "1.3.2",
     description = "DNS toolkit",
     long_description = \
     """dnspython is a DNS toolkit for Python. It supports almost all
